--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-router": "^0.0.1",
     "mongoose": "^9.1.5",
-    "nodemon": "^3.1.11"
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^2.2.1",
+    "nodemon": "^3.1.11",
+    "streamifier": "^0.1.1"
   }
 }
