--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Raj",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.9.0",
     "dotenv": "^17.2.3",
@@ -20,6 +21,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^3.1.11",
+    "pdf-parse": "^2.4.5",
     "streamifier": "^0.1.1"
   }
 }
