--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Raj",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@langchain/textsplitters": "^1.0.1",
     "axios": "^1.13.4",
     "bcrypt": "^6.0.0",
@@ -23,6 +24,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^3.1.11",
+    "openai": "^6.22.0",
     "pdf-parse": "^2.4.5",
     "streamifier": "^0.1.1"
   }
